# iot-system

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.recognition-worker  Dockerfile.stream-extractor  devenv.nix
.sqlx/: query-2d2fbb442a53a0cf30e33068151fcc339639637d83c3424e787bcfd87104b171.json  query-650d1a44f91bd2c885fae9101862b73e55c2651204cb2c1b00f0f7c8c270e7ab.json  query-f8b6574687dc8ee5e8a8726f462e037f0a55eb181d63daa5bbb39b87956d73ee.json
entity-api/: Cargo.toml  README.md
entity-api/.sqlx/: query-0235d7c45f77eec139ba1385f7a086f4def9e636c98d7a615bca1a427d9787b6.json  query-18689d3d0f304f4952b99d87f9c4e48dc537ebdc92274d3dd96f0e25b1589ce2.json  query-1c6dc00f8cc9e66f58cea5aab370324f252a247dde307e6abfe5571f3c3c07a7.json  query-37b486f65555e50ad16ee887b979954efa87faab22a209b0630cef701cd52154.json  query-49ee0e67464e475b5d6825371af0235490808765db102ba3187996d5fd9f7a5f.json  query-6ae1ea335c5284306190f92bd3636d367adafd4afb09655c98e8d0fc58d17101.json  query-dcb7fcca3bceb70fcec53f4f2b4bfa3d5a80efa64e2228b3d8058988b632a9e1.json
entity-api/src/: config.rs  database.rs  entity.rs  main.rs  mutation.rs  prelude.rs  query.rs  storage.rs  utils.rs
entity-gateway/: Cargo.toml  README.md
entity-gateway/.sqlx/: query-21b640c256cf995a903a97de2523c193c5e956025dfd30d90220aaa2e5ec8e5a.json  query-8074d79773c7574ad1647582677f3922e18f240a15915f64c69cad3622c5f1b3.json  query-bc4a1fe984ce37255963e5f222dc30861a089340db3c7f1cc729b7e848805924.json
entity-gateway/src/: config.rs  database.rs  discord.rs  event.rs  main.rs  storage.rs
migrations/: 20241221070641_recognition_entity.down.sql  20241221070641_recognition_entity.up.sql  20241221122248_allow_no_category.down.sql  20241221122248_allow_no_category.up.sql  20241222081957_add_monitor_source.down.sql  20241222081957_add_monitor_source.up.sql  20241222152515_add_timezone_to_created_at.down.sql  20241222152515_add_timezone_to_created_at.up.sql
recognition-worker/: Cargo.toml  README.md
recognition-worker/scripts/: download-model.sh
recognition-worker/src/: config.rs  main.rs  recognizer.rs
src/: main.rs  mutation.rs  prelude.rs  query.rs  types.rs  utils.rs
stream-extractor/: Cargo.toml  README.md
stream-extractor/src/: config.rs  main.rs  worker.rs
