[package]
name = "entity-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.94"
async-nats = "0.38.0"
async-trait = "0.1.83"
bytes = "1.9.0"
chrono = { version = "0.4.39", features = ["serde"] }
discord-webhook2 = { version = "0.4.2" }
futures = "0.3.31"
image = "0.25.5"
reqwest = "0.12.9"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
sqlx = { version = "0.8.2", features = ["time"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.13", features = ["rt"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
