[package]
name = "recognition-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.94"
async-nats = "0.38.0"
bytes = { version = "1.9.0", features = ["serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
futures = "0.3.31"
image = { version = "0.25.5", features = ["serde"] }
ort = "2.0.0-rc.9"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
tokio-util = { version = "0.7.13", features = ["rt"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
yolo-rs = "0.1.1"

[features]
coreml = ["ort/coreml"]
cuda = ["ort/cuda"]
